Fix alignment of page main header text

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -2690,7 +2690,7 @@ p {
 
 .campaigns-title {
   display: flex;
-  align-items: flex-end;
+  align-items: center;
   text-align: left;
 }
 
